Refactor SonarLint